# gitmagic

./: Makefile  makeover  meson.build  meson_compile_book.py
en/: meson.build  meson_compile_book.py
